style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

:root {
  /* font */
  font-size: 62.5%;
  font-family: "Mulish", sans-serif;

  /* colors */
  --white: #fff;
  --background-color: #f4fcff;
  --primary-color: #065e7c;
  --secondary-color: #387e96;
  --text-color: #121214;
  --title-color: #202024;
}

body {
  font-size: 1.6rem;
  background: var(--background-color);
  color: var(--text-color);
}

h2,
h3 {
  color: var(--title-color);
  font-weight: 700;
}

h2 {
  font-size: 2.4rem;
}

h3 {
  font-size: 1.8rem;
}

p,
h2,
h3 {
  line-height: 160%;
}

#blog {
  /* max-width: 43rem; */
  height: 100vh;
  margin-inline: auto;
  display: grid;
  grid-template-rows: max-content 1fr max-content;
}

.container {
  padding-inline: 2.2rem 2.6rem;
}

header {
  background: var(--primary-color);
  padding: 1.6rem 0.6rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 2.6rem;
}

form {
  width: 100%;
}

header label {
  width: 1px;
  height: 1px;
  position: absolute;
  overflow: hidden;
}

header input {
  /* width: 24rem; */
  width: 100%;
  background: rgba(255, 255, 255, 0.2);
  border: 0;
  border-radius: 0.4rem;
  font-size: inherit;
  font-family: inherit;
  padding: 1.2rem 0 1.2rem 1.4rem;
  font-weight: 600;
}

header input::placeholder {
  color: var(--white);
}

header .avatar {
  width: 4.2rem;
  height: 4.2rem;
  border-radius: 50%;
  object-fit: cover;
}

.scroll-content {
  overflow-y: scroll;
}

/* main */
article .article-img {
  width: 100%;
}

article .container .article-title {
  margin-block: 3.1rem;
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}

article .container .article-title .icons img + img {
  padding-left: 1.2rem;
}

/* aside */
aside {
  margin-block: 3.4rem 3.9rem;
}

figure {
  margin-top: 3.2rem;
  display: flex;
  align-items: center;
  gap: 1.6rem;
}

figure img {
  border-radius: 0.5rem;
}

figcaption p {
  font-size: 1.4rem;
}

/* footer */
footer {
  background: var(--secondary-color);
  padding-block: 2.7rem;
}

footer p {
  color: var(--white);
  line-height: 0;
  text-align: center;
}

